﻿Version [Version Number] ([Friendly Version Number]) [Release Date]


Version vNext
	New features:
		-[Integration.Web.Forms] ASP.NET Web Forms integration added. (work item 19510)


Version 2.2.3 (v2.2.3 RTM)  2013-05-05
	Small performance improvement and bug fix concerning the use of ResolveUnregisteredType and
	RegisterOpenGeneric.

	Changes:
		-[Core] ResolveUnregisteredType event was triggered more often than needed, which had a negative
		 impact on performance.

	Bug fixes:
		-[Core] Use of ResolveUnregisteredType event (that is primarily consumed by the RegisterOpenGeneric
		 extension methods) could lead to incorrect 'Single Responsibility Violation' warnings in the
		 Debugger Diagnostic view. (work item 19670)


Version 2.2.1 (v2.2.1 RTM)  2013-04-19
	This patch release fixes a few small bugs and and performance improvements. The performance of
	the initialization phase is improved and items of registered collections can now be retrieved with an
	O(1) characteristic.

	New features:
		-[Integration.Web.Mvc] SimpleInjectorMvcExtensions.GetControllerTypesToRegister method added. This
		 allows users to change the way MVC controllers are registered by default (using the
		 RegisterMvcControllers overload).

	Changes:
		-[Core] When a collection is registered using RegisterAll<T>(T[]), RegisterAll<T>(Type[]), 
		 RegisterAll<T>(IEnumerable<Type>) or RegisterAll(Type, IEnumerable<Type>), retrieving that instance
		 using the generic GetAllInstances<T>() will now return a collection that implements IList<T>. This
		 allows retrieving elements by index with an performance characteristic of O(1). Collections decorated
		 using the RegisterDecorator overloads will maintain this behavior. Note that this is not supported
		 when retrieving instances using GetAllInstances(Type). (work item 19575)
		-[Core] Each container instance now uses a single dynamic assembly for delegate compilation. This used