@@ -176,6 +176,9 @@
     <Compile Include="..\SimpleInjector.NET.Tests.Unit\InstanceProducerTests.cs">
       <Link>InstanceProducerTests.cs</Link>
     </Compile>
+    <Compile Include="..\SimpleInjector.NET.Tests.Unit\LifestyleRegistrationTests.cs">
+      <Link>LifestyleRegistrationTests.cs</Link>
+    </Compile>
     <Compile Include="..\SimpleInjector.NET.Tests.Unit\Lifestyles\HybridLifestyleTests.cs">
       <Link>Lifestyles\HybridLifestyleTests.cs</Link>
     </Compile>
@@ -214,9 +217,6 @@
     </Compile>
     <Compile Include="..\SimpleInjector.NET.Tests.Unit\RegisterSingleConcreteTests.cs">
       <Link>RegisterSingleConcreteTests.cs</Link>
-    </Compile>
-    <Compile Include="..\SimpleInjector.NET.Tests.Unit\RegistrationTests.cs">
-      <Link>RegistrationTests.cs</Link>
     </Compile>
     <Compile Include="..\SimpleInjector.NET.Tests.Unit\ResolveUnregisteredTypeEventTests.cs">
       <Link>ResolveUnregisteredTypeEventTests.cs</Link>
